// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render Expenses Summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     expenses totaling 
    $231,345,634.56
  </h1>
</div>
`;

exports[`should correctly render Expenses Summary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     expenses totaling 
    $2.31
  </h1>
</div>
`;
